vmlaunch/vmautomation-playbook/VMUpgradeRhel8/playbooks/roles/shared/files/iptables
#  Iptables firewall configuration for IPv4
#
#  Firewall configuration written by system-config-firewall.
#  Manual customization of this file is not recommended.
#
#  -A INPUT -p <protocol> --dport <port> -m state --state NEW -j ACCEPT
#
*filter


# Default mode is DROP
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]


# Local interface
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A INPUT -s 127.0.0.0/8 -j DROP


# Allow new, established and related outgoing connections
-A OUTPUT -p tcp -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT 
-A OUTPUT -p udp -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT 
-A OUTPUT -p icmp -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT 


# Allow established and related incoming connections
-A INPUT -p tcp -m state --state ESTABLISHED,RELATED -j ACCEPT 
-A INPUT -p udp -m state --state ESTABLISHED,RELATED -j ACCEPT 
-A INPUT -p icmp -m state --state ESTABLISHED,RELATED -j ACCEPT


# Allow new, established and related outgoing connections
-A FORWARD -p tcp -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT 
-A FORWARD -p udp -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT 
-A FORWARD -p icmp -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT 


# Allow incoming ping request packets
-A INPUT -p icmp --icmp-type 8 -s 0/0 -m state --state NEW -j ACCEPT


# Allow incoming SSH packets
-A INPUT -p tcp --dport 22 -m state --state NEW -j ACCEPT


# Open port for EMS to docker communication.
-A INPUT -m state --state NEW,ESTABLISHED -p udp --dport 69 -j ACCEPT
-A INPUT -m state --state ESTABLISHED -m udp -p udp --dport 1024: -j ACCEPT
-A OUTPUT -m state --state ESTABLISHED -m udp -p udp --sport 69 -j ACCEPT
-A OUTPUT -m state --state ESTABLISHED,RELATED -m udp -p udp --sport 1024: -j ACCEPT


# Open ports 161 and 162 for SNMP
-A INPUT -m state --state NEW -m udp -p udp --dport 161 -j ACCEPT
-A INPUT -m state --state NEW -m udp -p udp --dport 162 -j ACCEPT


# Enable BOOTP (& PXE DHCP) 
-A INPUT -m state --state NEW -m udp -p udp --dport 67 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT


# Open ports for idm
-A INPUT -m state --state NEW -m tcp -p tcp --dport 389 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 636 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 88 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 464 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 53 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 7389  -j ACCEPT
-A INPUT -m state --state NEW -m udp -p udp --dport 88 -j ACCEPT
-A INPUT -m state --state NEW -m udp -p udp --dport 464 -j ACCEPT
-A INPUT -m state --state NEW -m udp -p udp --dport 53 -j ACCEPT
-A INPUT -m state --state NEW -m udp -p udp --dport 123 -j ACCEPT


COMMIT
